# packaging-reusable-code

./: .gitignore  README.md  azure-pipelines.yml  pyproject.toml  unit-requirements.txt
src/my_custom_package/data_transformation/: etl.py
src/my_custom_package/simple_calculations/: algebra.py
