[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "my_custom_package"
dynamic = ["version"]
authors = [
  { name="Author_name", email="youremail@email.com" },
]
description = "Reusable code for our project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies =[
    "numpy==1.24.1"
]

[project.urls]
"Wiki" = "https://your-documentation.com"
